[metadata]
name = sriov_ci_tests
summary = Repository containing tests for SR-IOV 3rd party CI
description-file = README.rst
classifier =
    Programming Language :: Python :: 2
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
keywords = sriov neutron openstack
author = Saberlilydian
author-email = saberlilydian@163.com
project-url = https://github.com/saberlilydian/sriov-ci-tests

[entry_points]
tempest.test_plugins =
    sriov-ci-tests = sriov_ci_tests.plugin:SRIOVPlugin

[wheel]
universal = 1

[pbr]
warnerrors = True
